Name: loadsim
Version: 0.0
Build-Type: Simple
Cabal-Version: >=1.2
Executable loadsim
  Main-is: Main.hs
  GHC-Options: -Wall -threaded
  Build-Depends: base, clock >= 0.3, aeson >= 0.6.2.1, bytestring >= 0.9.2.1 && < 0.10, transformers >= 0.3.0.0, text >= 0.11.2.0, containers >= 0.4.2.1, mtl >= 2.1.1, stm >= 2.3, random >= 1.0.1.1
